force-app/main/default/objects/Biz_Review__c/Biz_Review__c.object-meta.xml
<CustomObject>
    <label>Strategy Committee</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Seq. No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategy Committee</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>