force-app/main/default/objects/Biz_Review__c/fields/AnswerStatus__c.field-meta.xml
<CustomField>
    <fullName>AnswerStatus__c</fullName>
    <formula>TotalQuestionCount__c = IsAnswerCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Answer Status</label>
    <type>Checkbox</type>
</CustomField>