force-app/main/default/objects/Biz_Review__c/fields/ConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmDate__c</fullName>
    <label>Confirm Date</label>
    <type>DateTime</type>
</CustomField>