force-app/main/default/objects/Biz_Review__c/fields/ContractAmount__c.field-meta.xml
<CustomField>
    <fullName>ContractAmount__c</fullName>
    <label>Contract Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>