force-app/main/default/objects/Biz_Review__c/fields/DeadLine__c.field-meta.xml
<CustomField>
    <fullName>DeadLine__c</fullName>
    <label>Dead Line</label>
    <type>Date</type>
</CustomField>