force-app/main/default/objects/Biz_Review__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Participation</fullName>
            </value>
            <value>
                <fullName>Nonparticipation</fullName>
            </value>
            <value>
                <fullName>Deferral</fullName>
            </value>
            <value>
                <fullName>Conditional Participation</fullName>
                <isActive>false</isActive>
                <label>Conditional Participation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>