force-app/main/default/objects/Biz_Review__c/fields/FinalDecision__c.field-meta.xml
<CustomField>
    <fullName>FinalDecision__c</fullName>
    <label>Final Decision</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>