force-app/main/default/objects/Biz_Review__c/fields/FM_version__c.field-meta.xml
<CustomField>
    <fullName>FM_version__c</fullName>
    <formula>IF( Version__c == 1, TEXT(Version__c) + &apos;st&apos; ,
IF(Version__c == 2, TEXT(Version__c) + &apos;nd&apos;,
IF(Version__c == 3, TEXT(Version__c) + &apos;rd&apos;,
IF(Version__c &gt;=4, TEXT(Version__c) + &apos;th&apos;, &apos;&apos;)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FM version</label>
    <type>Text</type>
</CustomField>