force-app/main/default/objects/Biz_Review__c/fields/IsAnswerCount__c.field-meta.xml
<CustomField>
    <fullName>IsAnswerCount__c</fullName>
    <label>Total Number of Answer</label>
    <summaryFilterItems>
        <field>Question__c.IsAnswer__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Question__c.BOBizReview__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>