force-app/main/default/objects/Biz_Review__c/fields/LaborMM__c.field-meta.xml
<CustomField>
    <fullName>LaborMM__c</fullName>
    <label>Labor M/M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>