force-app/main/default/objects/Biz_Review__c/fields/OpertingProfit__c.field-meta.xml
<CustomField>
    <fullName>OpertingProfit__c</fullName>
    <label>Operting Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>