force-app/main/default/objects/Biz_Review__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>BO</description>
    <label>BO</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>BO_Biz_Review</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>