force-app/main/default/objects/Biz_Review__c/fields/OriginalPriceVersion__c.field-meta.xml
<CustomField>
    <fullName>OriginalPriceVersion__c</fullName>
    <label>Original price version</label>
    <length>4</length>
    <type>Text</type>
</CustomField>