force-app/main/default/objects/Biz_Review__c/fields/PMAnswerStatus__c.field-meta.xml
<CustomField>
    <fullName>PMAnswerStatus__c</fullName>
    <formula>TotalQuestionCount__c = IsPMAnswerCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Answer Status</label>
    <type>Checkbox</type>
</CustomField>