force-app/main/default/objects/Biz_Review__c/fields/StrategyCommitteeMethod__c.field-meta.xml
<CustomField>
    <fullName>StrategyCommitteeMethod__c</fullName>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>전사</fullName>
            </value>
            <value>
                <fullName>사업부</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>