force-app/main/default/objects/Biz_Review__c/fields/TotalQuestionCount__c.field-meta.xml
<CustomField>
    <fullName>TotalQuestionCount__c</fullName>
    <label>Total Number of Questions</label>
    <summaryForeignKey>Question__c.BOBizReview__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>