force-app/main/default/objects/Biz_Review__c/fields/TotalScore__c.field-meta.xml
<CustomField>
    <fullName>TotalScore__c</fullName>
    <label>총 점수(IF용)</label>
    <summarizedField>Question__c.TotalScore__c</summarizedField>
    <summaryForeignKey>Question__c.BOBizReview__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>