force-app/main/default/objects/Biz_Review__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>버전</description>
    <label>Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>